Доработки по интеграции и прочие мелочи
